<resources>
    <string name="app_name">AndroidLabs</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\'m a Button</string>
    <string name="edtLogin">Login</string>
    <string name="edtPwd">Password</string>
    <string name="swTxt">What does this do?</string>
    <string name="btnLogin">Log In</string>
    <string name="swMessage">Do you want to close the Activity?</string>
    <string name="swTitle">Information</string>
    <string name="swPositiveButton">Yes</string>
    <string name="swNegativeButton">No</string>
    <string name="toastString">Here is my response</string>
    <string name="startChatButton">Start Chat</string>
    <string name="sendButton">Send</string>
    <string name="btnWeatherForecast">Weather Forecast</string>
    <string name="fragDeleteBtn">Delete This Message</string>
    <string name="fragTvMessageHint">Selected Message</string>
    <string name="fragTvMessageId">Selected Id</string>
    <string name="title_activity_test_toolbar">TestToolbar</string>
    <string name="selectYourChoice">Do you want to go back?</string>
    <string name="ok">Yes</string>
    <string name="cancel">No</string>
    <string name="msgNotificationHint">Enter new message</string>
    <string name="btnToolbar">ToolBar Activity</string>
    <string name="notifyMsg">Notify User</string>
</resources>
