<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/tv_Message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fragTvMessageHint" />

    <TextView
        android:id="@+id/tv_Id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_Message"
        android:hint="@string/fragTvMessageId" />

    <Button
        android:id="@+id/btn_deleteMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/fragDeleteBtn" />
</RelativeLayout>